--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular 2 App</title>
+    <title>Chart App</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset='utf-8'>
     <base href="/">
